--- a/index.html
+++ b/index.html
@@ -25,28 +25,28 @@
           <!-- /.burger -->
           <div class="main-menu">
             <div class="block">
-              <a href="javascript:;">menu</a>
+              <a href="#menu">menu</a>
               <p>Sit amet constetur adipisicing elit. Fugit perspiciatis</p>
             </div>
             <!-- /.block -->
             <div class="block">
-              <a href="javascript:;">about</a>
+              <a href="#about">about</a>
               <p>Adipisicing elit. Fugit pipsam ratione numquam</p>
               <p></p>
             </div>
             <!-- /.block -->
             <div class="block">
-              <a href="javascript:;">events</a>
+              <a href="#events">events</a>
               <p>Ratione numquam lorem ipsum dolor sit amet tetur</p>
             </div>
             <!-- /.block -->
             <div class="block">
-              <a href="javascript:;">reservations</a>
+              <a href="#reservations">reservations</a>
               <p>Voluptates animi cupiditate similique sint</p>
             </div>
             <!-- /.block -->
             <div class="block">
-              <a href="javascript:;">contact</a>
+              <a href="#contact">contact</a>
               <p>Quis nemo odio saepe ullam vitae officiis delectus</p>
             </div>
             <!-- /.block -->
@@ -79,6 +79,47 @@
     <!-- /.container -->
   </header>
   <!-- /.header -->
+
+  <main>
+    <section class="section-menu" id="menu">
+      <div class="container">
+        <div class="menu-wrap menu-wrap1">
+          <div class="block left">
+            <h5>About Voila Restaurant</h5>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec convallis lorem nec enim tempus viverra
+              condimentum eget dui. Quisque ac ornare orci lacinia facilisis velit <a href="javascript">eget
+                interdum</a></p>
+            <p>Quisque orci neque, euismod vitae turpis quis, accumsan iaculis velit. Nulla lacinia facilisis velit eget
+              interdum</p>
+            <div class="btn">
+              <button>read more</button>
+            </div>
+            <!-- /.btn -->
+          </div>
+          <!-- /.block -->
+          <div class="block right">
+            <img src="img/menu/1.png" alt="">
+          </div>
+          <!-- /.block -->
+        </div>
+        <!-- /.menu-wrap -->
+        <div class="menu-wrap menu-wrap2">
+          <div class="block left">
+            <img src="img/menu/2.png" alt="">
+          </div>
+          <!-- /.block -->
+          <div class="block right">
+            <img src="img/menu/3.png" alt="">
+            <img src="img/menu/4.png" alt="">
+          </div>
+          <!-- /.block -->
+        </div>
+        <!-- /.menu-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section-menu -->
+  </main>
 
 
 
