--- a/index.html
+++ b/index.html
@@ -119,6 +119,181 @@
       <!-- /.container -->
     </section>
     <!-- /.section-menu -->
+    <section class="section-about" id="about">
+      <div class="container">
+        <div class="section-about-wrap">
+          <div class="block">
+            <div class="box box-wrap">
+              <div class="img">
+                <img src="img/about/1.png" alt="">
+              </div>
+              <!-- /.img -->
+              <div class="img">
+                <img src="img/about/2.png" alt="">
+              </div>
+              <!-- /.img -->
+            </div>
+            <!-- /.box -->
+            <div class="box">
+              <img src="img/about/3.png" alt="">
+            </div>
+            <!-- /.box -->
+          </div>
+          <!-- /.block -->
+          <div class="block content">
+            <h5>Tasteful French Cuisine</h5>
+            <p>Lorem Ipsum roin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
+              nisi elit <a href="javascript:;">consequat ipsum</a>, nec sagittis sem nibh id elit</p>
+            <p>Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. Nam nec <a
+                href="javascript:;">tellus a odio</a> tincidunt auctor a ornare odio. This duis sed odio sit amet nibh
+              cursus a sit amet mauris. Morbi accumsan ipsum vulputate</p>
+            <div class="btn">
+              <button>view menu</button>
+            </div>
+            <!-- /.btn -->
+          </div>
+          <!-- /.block -->
+        </div>
+        <!-- /.section-about-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.section-about -->
+    <section class="events" id="events">
+      <div class="container">
+        <div class="events-wrap">
+          <div class="block block-form">
+            <div class="title">
+              <h5>Make a Reservation</h5>
+            </div>
+            <!-- /.title -->
+            <div class="form">
+              <form action="#" method="POST">
+                <div class="input">
+                  <input type="text" name="name" placeholder="Name*" required>
+                  <i class="fas fa-user"></i>
+                </div>
+                <!-- /.input -->
+                <div class="input">
+                  <input type="text" placeholder="Date*" required>
+                  <i class="fas fa-calendar-alt"></i>
+                </div>
+                <!-- /.input -->
+                <div class="input">
+                  <input type="text" placeholder="Time*" required>
+                  <i class="fas fa-clock"></i>
+                </div>
+                <!-- /.input -->
+                <div class="input">
+                  <input type="text" placeholder="Commensals*" required>
+                  <i class="fas fa-user-friends"></i>
+                </div>
+                <!-- /.input -->
+                <div class="btn">
+                  <button>find a table</button>
+                </div>
+                <!-- /.btn -->
+              </form>
+            </div>
+            <!-- /.form -->
+          </div>
+          <!-- /.block -->
+          <div class="block block-events">
+            <div class="title">
+              <h5>Upcoming Events</h5>
+            </div>
+            <!-- /.title -->
+            <div class="block-content">
+              <div class="block-wrap">
+                <div class="img">
+                  <img src="img/events/1.png" alt="">
+                </div>
+                <!-- /.img -->
+                <div class="content">
+                  <h6>Live Music Fridays</h6>
+                  <div class="title-wrap">
+                    <div class="date">
+                      <i class="fas fa-calendar-alt"></i>
+                      <p>February 28th</p>
+                    </div>
+                    <!-- /.date -->
+                    <div class="time">
+                      <i class="fas fa-clock"></i>
+                      <p>6:00 PM</p>
+                    </div>
+                    <!-- /.time -->
+                  </div>
+                  <!-- /.title-wrap -->
+                  <p class="text">Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt auctor a ornare odio non
+                    mauris</p>
+                  <a href="javascript:;">Read more...</a>
+                </div>
+                <!-- /.content -->
+              </div>
+              <!-- /.block-wrap -->
+              <div class="block-wrap">
+                <div class="img">
+                  <img src="img/events/2.png" alt="">
+                </div>
+                <!-- /.img -->
+                <div class="content">
+                  <h6>Louis XII Food Festival</h6>
+                  <div class="title-wrap">
+                    <div class="date">
+                      <i class="fas fa-calendar-alt"></i>
+                      <p>March 12th</p>
+                    </div>
+                    <!-- /.date -->
+                    <div class="time">
+                      <i class="fas fa-clock"></i>
+                      <p>12:00 PM</p>
+                    </div>
+                    <!-- /.time -->
+                  </div>
+                  <!-- /.title-wrap -->
+                  <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum atque, odit optio
+                    veritatis</p>
+                  <a href="javascript:;">Read more...</a>
+                </div>
+                <!-- /.content -->
+              </div>
+              <!-- /.block-wrap -->
+              <div class="block-wrap">
+                <div class="img">
+                  <img src="img/events/1.png" alt="">
+                </div>
+                <!-- /.img -->
+                <div class="content">
+                  <h6>Magic show with Karim Diaw</h6>
+                  <div class="title-wrap">
+                    <div class="date">
+                      <i class="fas fa-calendar-alt"></i>
+                      <p>March 22nd</p>
+                    </div>
+                    <!-- /.date -->
+                    <div class="time">
+                      <i class="fas fa-clock"></i>
+                      <p>8:00 PM</p>
+                    </div>
+                    <!-- /.time -->
+                  </div>
+                  <!-- /.title-wrap -->
+                  <p class="text">Vel aliquid porro repellendus neque impedit assumenda quas a libero</p>
+                  <a href="javascript:;">Read more...</a>
+                </div>
+                <!-- /.content -->
+              </div>
+              <!-- /.block-wrap -->
+            </div>
+            <!-- /.block-content -->
+          </div>
+          <!-- /.block -->
+        </div>
+        <!-- /.events-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.events -->
   </main>
 
 
