--- a/index.html
+++ b/index.html
@@ -294,18 +294,109 @@
       <!-- /.container -->
     </section>
     <!-- /.events -->
+    <section class="reservations" id="reservations">
+      <div class="container">
+        <div class="reservations-wrap">
+          <div class="block">
+            <div class="title">
+              <h5>Book a Table</h5>
+            </div>
+            <!-- /.title -->
+            <p>Like our restaurant concept? Book a table and taste our dishes on first hand</p>
+            <div class="btn">
+              <button>book a table</button>
+            </div>
+            <!-- /.btn -->
+          </div>
+          <!-- /.block -->
+          <div class="block">
+            <div class="line-top"></div>
+            <!-- /.line-top -->
+            <div class="desc">
+              Or
+            </div>
+            <!-- /.desc -->
+            <div class="line-bottom"></div>
+            <!-- /.line-bottom -->
+          </div>
+          <!-- /.block -->
+          <div class="block">
+            <div class="title">
+              <h5>Tell to Your Friends</h5>
+            </div>
+            <!-- /.title -->
+            <p>Some of your friends may like to visit if you recommend us. They’ll trust your taste!</p>
+            <div class="social">
+              <button class="facebook">
+                <i class="fab fa-facebook-f"></i>
+                Share
+              </button>
+              <button class="twitter">
+                <i class="fab fa-twitter"></i>
+                Tweet
+              </button>
+            </div>
+            <!-- /.social -->
+          </div>
+          <!-- /.block -->
+        </div>
+        <!-- /.reservations-wrap -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.reservations -->
   </main>
 
-
-
-
-
-
-
-
-
-
-
+  <footer class="footer" id="contact">
+    <div class="container">
+      <div class="footer-wrap">
+        <div class="block logo">
+          <h3>Voilà</h3>
+        </div>
+        <!-- /.block -->
+        <div class="block navigation">
+          <h5>Navigation</h5>
+          <div class="content">
+            <a href="#menu">menu</a>
+            <a href="#about">about</a>
+            <a href="#events">events</a>
+            <a href="#reservations">reservations</a>
+            <a href="#contact">contact</a>
+          </div>
+          <!-- /.content -->
+        </div>
+        <!-- /.block -->
+        <div class="block visit">
+          <h5>visit us</h5>
+          <div class="content">
+            <p>Nec sagittis sem nibh id elit. Duis sed odio sit amet nibh. <a href="javascript:;">View on the map</a>
+            </p>
+            <div class="footer-social">
+              <h5>connect with us</h5>
+              <a href="javascript:;">
+                <i class="fab fa-facebook-f"></i>
+              </a>
+              <a href="javascript:;">
+                <i class="fab fa-twitter"></i>
+              </a>
+              <a href="javascript:;">
+                <i class="fab fa-instagram"></i>
+              </a>
+              <a href="javascript:;">
+                <i class="fab fa-pinterest-p"></i>
+              </a>
+            </div>
+            <!-- /.footer-social -->
+          </div>
+          <!-- /.content -->
+        </div>
+        <!-- /.block -->
+      </div>
+      <!-- /.footer-wrap -->
+    </div>
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer -->
 
 
 
